# SKDP

./: CMakeLists.txt  QRCS-PL License.txt  README.md
.github/: SECURITY.md
.github/workflows/: build.yml  codeql-analysis.yml
Documentation/: Quantum Secure Messaging Protocol 2021-06-11.docx  SKDP Specification 2021-08-15.docx  SKDP Specification 2021-09-02.docx
Documents/: SKDP Presentation.pptx  SKDP Summary.docx
SKDP/: SKDP.sln  SKDPX.vcxproj  SKDPX.vcxproj.filters  doxymain.h  skdpclient.c
SKDP Client/: SKDP.vcxproj.filters  common.h
SKDP Server/: SKDP Server.vcxproj  common.h
SKDP/Documents/: SKDP Specification.docx
SKDP/QSC/: QSC.cbp  QSC.depend  QSC.layout  QSC.vcxproj  QSC.vcxproj.filters  acp.c  acp.h  aes.c  aes.h  arrayutils.c  arrayutils.h  async.c  async.h  asyncresult.h  chacha.c  chacha.h  common.h  consoleutils.c  consoleutils.h  cpuid.c  cpuid.h  csg.c  csg.h  csp.c  csp.h  csx.c  csx.h  dilithium.c  dilithium.h  dilithiumbase.c  dilithiumbase.h  dilithiumbase_avx2.c  dilithiumbase_avx2.h  donna128.c  donna128.h  ec25519.c  ec25519.h  ecdh.c  ecdh.h  ecdhbase.c  (+101 more)
SKDP/SKDP Client/: SKDP.vcxproj  SKDP.vcxproj.filters  appclt.c  appclt.h  common.h  skdp.h  skdpc.c  (+2 more)
Source/: SKDP.sln
docs/: annotated.html  dir_11a2b35b32cf64f0531b234e6700c197.html  dir_11a2b35b32cf64f0531b234e6700c197.js  doxygen_crawl.html  files.html  functions_vars.html  globals_enum.html  navtreedata.js  skdp_8h.html  structqsmp__keep__alive__state.html  structskdp__client__state.html  structskdp__device__key.html  structskdp__device__key.js  structskdp__server__key.html  structskdp__server__state.html
(+217 files in other folders)
